# PUTM_EV_FF_CurrentLoop

./: .gitignore
data/model/: final_data.csv  front_right_data.csv  fsp_endu_current.csv  merged_wheel_data.csv  rear_left_data.csv  rear_right_data.csv  setpoints.csv
docs/: generate_ros2_guide_pdf.py  notatnik.txt  raport_analiza_modeli.md  repository_structure.txt  ros2_integration_guide.md
model_weights/: xgb_q90_FL.ubj  xgb_q90_FR.ubj  xgb_q90_RL.ubj  xgb_q90_RR.ubj
ros2_pkg/current_predictor/: package.xml  setup.cfg
ros2_pkg/current_predictor/config/: params.yaml
ros2_pkg/current_predictor/current_predictor/: lag_buffer.py  xgb_predictor.py
ros2_pkg/current_predictor/launch/: current_predictor.launch.py
src/: 00_drive_connection_check.ipynb  01_data_analysis.ipynb  02_kalman_current.ipynb  02_kalman_ekf.ipynb  03_xgboost_current.ipynb  04_arx_armax.ipynb  05_tcn.ipynb  06_esn.ipynb  check_rear_only_setpoints.py  export_models.py  rosbag_to_csv.py
src/functions/: armax.py  arx.py  ekf_nonlinear.py  esn.py  evaluation.py  kalman_filter.py  tcn.py
src/scripts/: generate_notebooks.py  generate_pdf.py  generate_ros2_guide_pdf.py
vcu_models/: export_models.py
vcu_models/current_predictor/: setup.py
vcu_models/current_predictor/current_predictor/: arx_predictor.py  node.py
vcu_models/model_weights/: arx_q90_weights.json  xgb_meta.json
